# litestar-starter

./: app_auth.py.sample  pyproject.toml  pyproject.toml.auth.sample  readme.md  sample.py  test.sqlite
plugins/: sqlalchemy_async_before_send_handler.py  sqlalchemy_async_dependencies.py  sqlalchemy_async_init_plugin_example.py  sqlalchemy_async_plugin_example.py  sqlalchemy_async_serialization_dto.py  sqlalchemy_async_serialization_plugin.py  sqlalchemy_async_serialization_plugin_marking_fields.py  sqlalchemy_sync_before_send_handler.py  sqlalchemy_sync_dependencies.py  sqlalchemy_sync_init_plugin_example.py  sqlalchemy_sync_plugin_example.py  sqlalchemy_sync_serialization_plugin.py  sqlalchemy_sync_serialization_plugin_marking_fields.py
plugins/tutorial/: full_app_no_plugins.py  full_app_with_init_plugin.py  full_app_with_plugin.py  full_app_with_serialization_plugin.py  full_app_with_session_di.py
