[tool.poetry]
name = "newlite"
version = "0.1.0"
description = ""
authors = ["Pete Letkeman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["sqlalchemy", "standard"], version = "^2.2.1"}
pydantic = {extras = ["email"], version = "^2.4.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.22"
litestar-users = "^1.0.0rc3"
aiosqlite = "^0.19.0"
starlite-jwt = "^1.5.0"
prometheus-client = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
